Added PS3 education

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Playstation 3 Expert 
+  uni: PSU
+  year: August 14, 1974
   # awards:
-  # summary:
+  # summary: Breaks things
